--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
 </section>
 
 <footer>
-  <strong>English с Анной</strong> · Репетитор английского для детей от 6 лет<br>
+  <strong>English с Мариной</strong> · Репетитор английского для детей от 6 лет<br>
   Онлайн по всей России · Офлайн по договорённости
 </footer>
 
